plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'jacoco'
    id 'org.sonarqube' version '6.0.0.5145'
}

group = 'roomIt'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk
    implementation 'software.amazon.awssdk:s3:2.20.23' // 최신 버전 확인 필요


    // 쿼리DSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    // WebClient
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework:spring-messaging'
    testImplementation 'org.springframework:spring-websocket'

    // Spring Data Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Redisson
    implementation 'org.redisson:redisson-spring-boot-starter:3.27.0'

    // 공간 함수
    implementation 'org.hibernate:hibernate-spatial:6.5.3.Final' // Hibernate Core와 동일한 버전
    implementation group: 'org.locationtech.jts', name: 'jts-core', version: '1.19.0'

}

def jacocoDir = layout.buildDirectory.dir("reports/")
jacocoTestReport {
    dependsOn test // 테스트 작업이 완료된 후 실행
    reports {
        xml.required.set(true)  // XML 리포트 생성
        html.required.set(true) // HTML 리포트 생성
        csv.required.set(false) // CSV는 필요하지 않으면 false
        html.destination jacocoDir.get().file("jacoco/index.html").asFile
        xml.destination jacocoDir.get().file("jacoco/index.xml").asFile
    }
}

sonarqube {
    properties {
        property "sonar.projectKey", "prgrms-web-devcourse-final-project_WEB1_2_BUMBLEBEE_BE"  // SonarCloud 프로젝트 키
        property "sonar.organization", "prgrms-web-devcourse-final-project"                 // SonarCloud 조직 이름
        property "sonar.host.url", "https://sonarcloud.io"                                 // SonarCloud URL
        property "sonar.login", System.getenv("SONAR_TOKEN")                                // 토큰은 환경 변수로 관리
        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"  // JaCoCo 커버리지 경로
    }
}



tasks.named('test') {
    useJUnitPlatform()
}
